Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14089

Mixed debugging: Qt Creator having many "soft" asserts in the lldb debugger

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • None
    • Qt Creator 3.4.0-beta1, Qt Creator 4.2.1
    • Debugger

      A simple debugging session which I interrupt with the "stop" button causes Qt Creator to emit the following:

      C++-only debugging:

      Warning: NOTE: FINISH DEBUGGER (no active run control)SOFT ASSERT: "state() == InferiorShutdownRequested" in file debuggerengine.cpp, line 1027
      Debugger::Internal::LldbEngine(0x7fbff8756760, name = "LldbEngine") EngineShutdownRequested
      *** UNEXPECTED STATE TRANSITION:  Debugger::Internal::LldbEngine(0x7fbff8756760, name = "LldbEngine") "State changed from EngineShutdownRequested(20) to InferiorShutdownOk(19) [master]"
      SOFT ASSERT: "state() == EngineShutdownRequested" in file debuggerengine.cpp, line 1070
      Debugger::Internal::LldbEngine(0x7fbff8756760, name = "LldbEngine") DebuggerFinished
      SOFT ASSERT: "state() == EngineShutdownRequested" in file lldb/lldbengine.cpp, line 151
      DebuggerFinished
      SOFT ASSERT: "state() == EngineShutdownRequested" in file debuggerengine.cpp, line 1079
      Debugger::Internal::LldbEngine(0x7fbff8756760, name = "LldbEngine") DebuggerFinished
      *** UNEXPECTED STATE TRANSITION:  Debugger::Internal::LldbEngine(0x7fbff8756760, name = "LldbEngine") "State changed from DebuggerFinished(23) to EngineShutdownOk(22) [master]"
      Warning: NOTE: FINISH DEBUGGER (no active run control)
      HANDLE LLDB ERROR
      Warning: HANDLE LLDB ERROR (no active run control)
      LLDB FINISHED
      Warning: LLDB PROCESS FINISHED, status 1, code 0 (no active run control)
      Warning: NOTE: ENGINE SPONTANEOUS SHUTDOWN (no active run control)
      Warning: State changed BY FORCE from DebuggerFinished(23) to EngineShutdownOk(22) [master] (no active run control)
      Warning: State changed from EngineShutdownOk(22) to DebuggerFinished(23) [master] (no active run control)
      Warning: QUEUE: FINISH DEBUGGER (no active run control)
      Warning: NOTE: FINISH DEBUGGER (no active run control)
      

      Mixed mode debugging:

      SOFT ASSERT: "state() == InferiorShutdownRequested" in file debuggerengine.cpp, line 1027
      Debugger::Internal::LldbEngine(0x7fbfdf20dc20, name = "LldbEngine") InferiorShutdownOk
      *** UNEXPECTED STATE TRANSITION:  Debugger::Internal::LldbEngine(0x7fbfdf20dc20, name = "LldbEngine") "State changed from InferiorShutdownOk(19) to InferiorShutdownOk(19)"
      *** UNEXPECTED STATE TRANSITION:  Debugger::Internal::QmlCppEngine(0x7fbfd9d70150, name = "QmlCppEngine") "State changed from EngineShutdownRequested(20) to InferiorExitOk(16) [master]"
      SOFT ASSERT: "state() == EngineShutdownRequested" in file debuggerengine.cpp, line 1070
      Debugger::Internal::QmlCppEngine(0x7fbfd9d70150, name = "QmlCppEngine") DebuggerFinished
      SOFT ASSERT: "isAllowedTransition(state(),EngineShutdownRequested)" in file debuggerengine.cpp, line 1062
      *** UNEXPECTED STATE TRANSITION:  Debugger::Internal::LldbEngine(0x7fbfdf20dc20, name = "LldbEngine") "State changed from DebuggerFinished(23) to EngineShutdownRequested(20)"
      SOFT ASSERT: "state() == EngineShutdownRequested" in file qml/qmlcppengine.cpp, line 680
      DebuggerFinished
      SOFT ASSERT: "state() == EngineShutdownRequested" in file qml/qmlcppengine.cpp, line 689
      DebuggerFinished
      SOFT ASSERT: "state() == EngineShutdownRequested" in file debuggerengine.cpp, line 1079
      Debugger::Internal::QmlCppEngine(0x7fbfd9d70150, name = "QmlCppEngine") DebuggerFinished
      *** UNEXPECTED STATE TRANSITION:  Debugger::Internal::QmlCppEngine(0x7fbfd9d70150, name = "QmlCppEngine") "State changed from DebuggerFinished(23) to EngineShutdownOk(22) [master]"
      Warning: NOTE: FINISH DEBUGGER (no active run control)
      HANDLE LLDB ERROR
      Warning: HANDLE LLDB ERROR (no active run control)
      LLDB FINISHED
      Warning: LLDB PROCESS FINISHED, status 1, code 0 (no active run control)
      Warning: NOTE: ENGINE SPONTANEOUS SHUTDOWN (no active run control)
      Warning: State changed BY FORCE from DebuggerFinished(23) to EngineShutdownOk(22) (no active run control)
      SOFT ASSERT: "state() == EngineShutdownRequested" in file qml/qmlcppengine.cpp, line 689
      DebuggerFinished
      Warning: NOTE: ENGINE SHUTDOWN OK (no active run control)
      SOFT ASSERT: "state() == EngineShutdownRequested" in file debuggerengine.cpp, line 1079
      Debugger::Internal::QmlCppEngine(0x7fbfd9d70150, name = "QmlCppEngine") DebuggerFinished
      *** UNEXPECTED STATE TRANSITION:  Debugger::Internal::QmlCppEngine(0x7fbfd9d70150, name = "QmlCppEngine") "State changed from DebuggerFinished(23) to EngineShutdownOk(22) [master]"
      Warning: State changed from DebuggerFinished(23) to EngineShutdownOk(22) [master] (no active run control)
      Warning: State changed from EngineShutdownOk(22) to DebuggerFinished(23) [master] (no active run control)
      Warning: QUEUE: FINISH DEBUGGER (no active run control)
      Warning: NOTE: FINISH DEBUGGER (no active run control)
      

        For Gerrit Dashboard: QTCREATORBUG-14089
        # Subject Branch Project Status CR V

            hjk hjk
            portale Alessandro Portale
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes